src/GuruCParser.java
/* Generated By:JavaCC: Do not edit this line. GuruCParser.java */
import java.util.*;
import generator.*;

  public class GuruCParser implements GuruCParserConstants {
        private static Classes classes = new Classes();

    // Hastable for storing typedef types
    private static Set types = new HashSet();

    // Stack for determining when the parser
    // is parsing a typdef definition.
    private static Stack typedefParsingStack = new Stack();

    // Returns true if the given string is
    // a typedef type.
    private static boolean isType(String type){
          return types.contains(type);
    }

    // Add a typedef type to those already defined
    private static void addType(String type){
          types.add(type);
    }

    // Prints out all the types used in parsing the c source
    private static void printTypes(){
      for (Iterator i = types.iterator(); i.hasNext();) {
        System.out.println(i.next());
      }
    }

    // Run the parser
    public static void main ( String args [ ] ) {
      GuruCParser parser ;

          // Hack to include type "special types"
            types.add("__signed__");
            types.add("__const");
            types.add("__inline__");
            types.add("__signed");

      if(args.length == 0){
        System.out.println("Guru Parser .1:  Reading from standard input . . .");
        parser = new GuruCParser(System.in);
      }
      else if(args.length == 1){
        System.out.println("Guru Parser .1:  Reading from file " + args[0] + " . . ." );
      try {
        parser = new GuruCParser(new java.io.FileInputStream(args[0]));
      }
      catch(java.io.FileNotFoundException e){
        System.out.println("C Parser Version 0.1:  File " + args[0] + " not found.");
        return ;
        }
      }
      else {
        System.out.println("Guru Parser .1:  Usage is one of:");
        System.out.println("         java CParser < inputfile");
        System.out.println("OR");
        System.out.println("         java CParser inputfile");
        return ;
      }
      try {
        parser.TranslationUnit();
        System.out.println("Guru Parser .1:  Java program parsed successfully.");
        classes.build();
      }
      catch(ParseException e){
        System.out.println("Guru Parser .1:  Encountered errors during parse.");
        e.printStackTrace();
      }
    }

  static final public void TranslationUnit() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTENDS:
      case IDENTIFIER:
      case 62:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ClassDeclaration();
    }
  }

  static final public void ClassDeclaration() throws ParseException {
                           Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
          classes.addClass(t.toString());
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      jj_consume_token(IDENTIFIER);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 61:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(61);
        jj_consume_token(IDENTIFIER);
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    ClassMembers();
  }

  static final public void ClassMembers() throws ParseException {
    jj_consume_token(62);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 64:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      MemberDeclaration();
    }
    jj_consume_token(63);
  }

  static final public void MemberDeclaration() throws ParseException {
    if (jj_2_1(2147483647)) {
      attributos();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        metodos();
        break;
      case 64:
        construtores();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void construtores() throws ParseException {
    if (jj_2_2(2)) {
      jj_consume_token(64);
      jj_consume_token(65);
      jj_consume_token(62);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case SWITCH:
        case WHILE:
        case IF:
        case FOR:
        case DO:
        case IDENTIFIER:
        case 64:
        case 85:
        case 97:
        case 98:
        case 102:
        case 103:
        case 104:
        case 105:
        case 109:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        Statement();
      }
      jj_consume_token(63);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 64:
        jj_consume_token(64);
        Parametros();
        jj_consume_token(65);
        jj_consume_token(62);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
          case FLOATING_POINT_LITERAL:
          case SWITCH:
          case WHILE:
          case IF:
          case FOR:
          case DO:
          case IDENTIFIER:
          case 64:
          case 85:
          case 97:
          case 98:
          case 102:
          case 103:
          case 104:
          case 105:
          case 109:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_5;
          }
          Statement();
        }
        jj_consume_token(63);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void metodos() throws ParseException {
    if (jj_2_3(2147483647)) {
      metodos_com_parametros();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        metodos_sem_parametros();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void metodos_com_parametros() throws ParseException {
    if (jj_2_4(2)) {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(64);
      Parametros();
      jj_consume_token(65);
      jj_consume_token(62);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case SWITCH:
        case WHILE:
        case IF:
        case FOR:
        case DO:
        case IDENTIFIER:
        case 64:
        case 85:
        case 97:
        case 98:
        case 102:
        case 103:
        case 104:
        case 105:
        case 109:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        Statement();
      }
      jj_consume_token(63);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(64);
        Parametros();
        jj_consume_token(65);
        jj_consume_token(62);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
          case FLOATING_POINT_LITERAL:
          case SWITCH:
          case WHILE:
          case IF:
          case FOR:
          case DO:
          case IDENTIFIER:
          case 64:
          case 85:
          case 97:
          case 98:
          case 102:
          case 103:
          case 104:
          case 105:
          case 109:
            ;
            break;
          default:
            jj_la1[11] = jj_gen;
            break label_7;
          }
          Statement();
        }
        jj_consume_token(63);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void metodos_sem_parametros() throws ParseException {
    if (jj_2_5(2)) {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(62);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case SWITCH:
        case WHILE:
        case IF:
        case FOR:
        case DO:
        case IDENTIFIER:
        case 64:
        case 85:
        case 97:
        case 98:
        case 102:
        case 103:
        case 104:
        case 105:
        case 109:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_8;
        }
        Statement();
      }
      jj_consume_token(63);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        jj_consume_token(IDENTIFIER);
        CompoundStatement();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void CompoundStatement() throws ParseException {
    jj_consume_token(62);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case SWITCH:
      case WHILE:
      case IF:
      case FOR:
      case DO:
      case IDENTIFIER:
      case 64:
      case 85:
      case 97:
      case 98:
      case 102:
      case 103:
      case 104:
      case 105:
      case 109:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_9;
      }
      Statement();
    }
    jj_consume_token(63);
  }

  static final public void Statement() throws ParseException {
    if (jj_2_6(3)) {
      Expression();
      jj_consume_token(66);
    } else if (jj_2_7(3)) {
      Variable();
      Variable();
      jj_consume_token(67);
      Expression();
      jj_consume_token(66);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        Variable();
        jj_consume_token(67);
        Expression();
        jj_consume_token(66);
        break;
      case SWITCH:
      case IF:
        SelectionStatement();
        break;
      case WHILE:
      case FOR:
      case DO:
        IterationStatement();
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void SelectionStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      jj_consume_token(IF);
      jj_consume_token(64);
      Expression();
      jj_consume_token(65);
      CompoundStatement();
      label_10:
      while (true) {
        if (jj_2_8(2)) {
          ;
        } else {
          break label_10;
        }
        jj_consume_token(ELSEIF);
        jj_consume_token(64);
        Expression();
        jj_consume_token(65);
        CompoundStatement();
      }
      if (jj_2_9(2)) {
        jj_consume_token(ELSE);
        CompoundStatement();
      } else {
        ;
      }
      break;
    case SWITCH:
      jj_consume_token(SWITCH);
      jj_consume_token(64);
      Expression();
      jj_consume_token(65);
      CompoundStatement();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void IterationStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(64);
      Expression();
      jj_consume_token(65);
      CompoundStatement();
      break;
    case DO:
      jj_consume_token(DO);
      CompoundStatement();
      jj_consume_token(WHILE);
      jj_consume_token(64);
      Expression();
      jj_consume_token(65);
      EndOfStatement();
      break;
    case FOR:
      jj_consume_token(FOR);
      jj_consume_token(64);
      Expression();
      jj_consume_token(66);
      Expression();
      jj_consume_token(66);
      Expression();
      jj_consume_token(65);
      CompoundStatement();
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EndOfStatement() throws ParseException {
    jj_consume_token(66);
  }

  static final public void Expression() throws ParseException {
    LogicalTextOrExpression();
  }

  static final public void LogicalTextOrExpression() throws ParseException {
    LogicalTextXorExpression();
    if (jj_2_10(2)) {
      jj_consume_token(OR);
      LogicalTextOrExpression();
    } else {
      ;
    }
  }

  static final public void LogicalTextXorExpression() throws ParseException {
    LogicalTextAndExpression();
    if (jj_2_11(2)) {
      jj_consume_token(XOR);
      LogicalTextXorExpression();
    } else {
      ;
    }
  }

  static final public void LogicalTextAndExpression() throws ParseException {
    AssignmentExpression();
    if (jj_2_12(2)) {
      jj_consume_token(AND);
      LogicalTextAndExpression();
    } else {
      ;
    }
  }

  static final public void AssignmentExpression() throws ParseException {
    ConditionalExpression();
    if (jj_2_13(2)) {
      AssignmentOperator();
      Expression();
    } else {
      ;
    }
  }

  static final public void AssignmentOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 67:
      jj_consume_token(67);
      break;
    case 68:
      jj_consume_token(68);
      break;
    case 69:
      jj_consume_token(69);
      break;
    case 70:
      jj_consume_token(70);
      break;
    case 71:
      jj_consume_token(71);
      break;
    case 72:
      jj_consume_token(72);
      break;
    case 73:
      jj_consume_token(73);
      break;
    case 74:
      jj_consume_token(74);
      break;
    case 75:
      jj_consume_token(75);
      break;
    case 76:
      jj_consume_token(76);
      break;
    case 77:
      jj_consume_token(77);
      break;
    case 78:
      jj_consume_token(78);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ConditionalExpression() throws ParseException {
    Logical_Or_Expression();
    if (jj_2_14(2)) {
      jj_consume_token(79);
      Expression();
      jj_consume_token(80);
      Expression();
    } else {
      ;
    }
  }

  static final public void Logical_Or_Expression() throws ParseException {
    Logical_And_Expression();
    if (jj_2_15(2)) {
      jj_consume_token(81);
      Logical_Or_Expression();
    } else {
      ;
    }
  }

  static final public void Logical_And_Expression() throws ParseException {
    BitwiseOrExpression();
    if (jj_2_16(2)) {
      jj_consume_token(82);
      Logical_And_Expression();
    } else {
      ;
    }
  }

  static final public void BitwiseOrExpression() throws ParseException {
    BitwiseXorExpression();
    if (jj_2_17(2)) {
      jj_consume_token(83);
      BitwiseOrExpression();
    } else {
      ;
    }
  }

  static final public void BitwiseXorExpression() throws ParseException {
    BitwiseAndExpression();
    if (jj_2_18(2)) {
      jj_consume_token(84);
      BitwiseXorExpression();
    } else {
      ;
    }
  }

  static final public void BitwiseAndExpression() throws ParseException {
    EqualityExpression();
    if (jj_2_19(2)) {
      jj_consume_token(85);
      BitwiseAndExpression();
    } else {
      ;
    }
  }

  static final public void EqualityExpression() throws ParseException {
    RelationalExpression();
    if (jj_2_20(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 86:
        jj_consume_token(86);
        break;
      case 87:
        jj_consume_token(87);
        break;
      case 88:
        jj_consume_token(88);
        break;
      case 89:
        jj_consume_token(89);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      EqualityExpression();
    } else {
      ;
    }
  }

  static final public void RelationalExpression() throws ParseException {
    ShiftExpression();
    if (jj_2_21(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 90:
        jj_consume_token(90);
        break;
      case 91:
        jj_consume_token(91);
        break;
      case 92:
        jj_consume_token(92);
        break;
      case 93:
        jj_consume_token(93);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      RelationalExpression();
    } else {
      ;
    }
  }

  static final public void ShiftExpression() throws ParseException {
    AdditiveExpression();
    if (jj_2_22(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 94:
        jj_consume_token(94);
        break;
      case 95:
        jj_consume_token(95);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      ShiftExpression();
    } else {
      ;
    }
  }

  static final public void AdditiveExpression() throws ParseException {
    MultiplicativeExpression();
    if (jj_2_23(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 96:
        jj_consume_token(96);
        break;
      case 97:
        jj_consume_token(97);
        break;
      case 98:
        jj_consume_token(98);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      AdditiveExpression();
    } else {
      ;
    }
  }

  static final public void MultiplicativeExpression() throws ParseException {
    CastExpression();
    if (jj_2_24(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 99:
        jj_consume_token(99);
        break;
      case 100:
        jj_consume_token(100);
        break;
      case 101:
        jj_consume_token(101);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      MultiplicativeExpression();
    } else {
      ;
    }
  }

  static final public void CastExpression() throws ParseException {
    if (jj_2_25(2147483647)) {
      jj_consume_token(64);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(65);
    } else {
      ;
    }
    UnaryExpression();
  }

  static final public void UnaryExpression() throws ParseException {
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 85:
      case 97:
      case 102:
      case 103:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 85:
        jj_consume_token(85);
        break;
      case 97:
        jj_consume_token(97);
        break;
      case 102:
        jj_consume_token(102);
        break;
      case 103:
        jj_consume_token(103);
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    PrefixIncDecExpression();
  }

  static final public void PrefixIncDecExpression() throws ParseException {
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 104:
      case 105:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 104:
        jj_consume_token(104);
        break;
      case 105:
        jj_consume_token(105);
        break;
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    PostfixIncDecExpression();
  }

  static final public void PostfixIncDecExpression() throws ParseException {
    InstanceOfExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 104:
    case 105:
      label_13:
      while (true) {
        if (jj_2_26(3)) {
          jj_consume_token(104);
        } else if (jj_2_27(3)) {
          jj_consume_token(105);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 104:
        case 105:
          ;
          break;
        default:
          jj_la1[29] = jj_gen;
          break label_13;
        }
      }
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
  }

  static final public void InstanceOfExpression() throws ParseException {
    PostfixExpression();
    if (jj_2_28(2)) {
      jj_consume_token(INSTANCEOF);
      Expression();
    } else {
      ;
    }
  }
